infrastructure/dan/blockscout/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockscout
  namespace: blockscout-dan2
spec:
  selector:
    matchLabels:
      fullName: blockscout
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        fullName: blockscout
        organization: dan
    spec:
      containers:
      - args:
        - /bin/sh
        - -c
        - mix phx.server
        image: registry.unchain.io/unchain/blockscout:v4.1.7-beta
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 500Mi
        imagePullPolicy: Always
        name: blockscout
        ports:
        - containerPort: 4000
          name: 4000tcp02
          protocol: TCP
        tty: true
      imagePullSecrets:
      - name: registry-unchain-io
      restartPolicy: Always
